# YouDub-webui

./: Dockerfile.spleeter  Dockerfile.whisperx  makefile  pyproject.toml
.github/workflows/: build_docker.yaml  build_spleeter_docker.yaml  build_whipserx_docker.yaml
youdub/: step010_demucs_vr.py  step020_whisperx.py
