[project]
name = "youdub-webui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio",
    "loguru",
    "yt-dlp",
    # "git+https://github.com/facebookresearch/demucs#egg=demucs",
    "docker",
    "scipy",
    "librosa",
    # "git+https://github.com/m-bain/whisperx.git",
    "python-dotenv",
    "openai",
    "audiostretchy",
    "bilibili_toolman"
]
